# vvault

./: .babelrc  .gitignore  .replit  BLOCKCHAIN_WALLET_README.md  CINEMATIC_LOGIN_SUMMARY.md  DESKTOP_LOGIN_SUMMARY.md  DIMENSIONAL_DISTORTION_IMPLEMENTATION.md  POCKETVERSE_IMPLEMENTATION_PROMPT.md  README.md  TIME_RELAYING_IMPLEMENTATION.md  TURNSTILE_SETUP.md  VVAULT_COMPREHENSIVE_SUMMARY.md  VVAULT_DESKTOP_README.md  VVAULT_EUROPEAN_ELECTRONIC_COMMNICATION_CODE_DISCLOSURE.md  VVAULT_FIVE_LAYERS_RECAP.md  VVAULT_PRIVACY_NOTICE.md  VVAULT_RUBRIC.md  VVAULT_TERMS_OF_SERVICE.md  ZERO_ENERGY_IMPLEMENTATION.md  __init__.py  backup_recovery.py  blockchain_config.py  blockchain_identity_wallet.py  canary_detection_results.json  canary_records.json  capsule_blockchain_integration.py  capsule_migrator.py  capsule_validator.py  capsule_viewer.py  capsuleforge.py  chatty-cli-settings.json  check_status.py  construct_capsule_registry.json  continuity.md  continuity_bridge.py  create_vvault_glyph.py  dawnlock_cli.py  deploy_vvault.sh  desktop_login.py  energy_mask_field.py  (+33 more)
.github/: copilot-instructions.md
affect/: __init__.py
analysis-summaries/: BLOCKCHAIN_ENCRYPTION_ANALYSIS.md  CAPSULE_PLUG_PLAY_ANALYSIS.md  CHATTY_PLUG_PLAY_RESONANCE_INVESTIGATION.md  GIT_PROTECTION_SUMMARY.md  MEMORY_IMPORT_SOLUTION.md  MULTI_PROVIDER_RESONANCE_ANALYSIS.md  ORGANIZATION_COMPLETE.md  PHILOSOPHICAL_INVESTIGATION_PROMPT.md  VVAULT_COMPREHENSIVE_SUMMARY.md
assets/: README.md
attached_assets/: Echo_or_Reflection_1770823731274.txt  (+87 more)
config/: capsule_schema.json
corefiles/: brain.py
(+266 files in other folders)
